--- a/src/assets/appstyle/adminbill.module.css
+++ b/src/assets/appstyle/adminbill.module.css
@@ -9,7 +9,7 @@
     padding: 0;
     font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
     box-sizing: border-box;
-    font-size:18px;
+    font-size:19px;
 }
 
 
@@ -49,10 +49,10 @@
     border: 1px solid #e9e9e9;
     border-radius: 3px;
 }
-
+*/
 .content-wrap {
     padding: 20px;
-}
+} 
 
 .content-block {
     padding: 0 0 20px;
@@ -74,7 +74,7 @@
 }
 .footer p, .footer a, .footer unsubscribe, .footer td {
     font-size: 12px;
-} */
+} 
 
 /* -------------------------------------
     TYPOGRAPHY
@@ -199,7 +199,7 @@ a {
 .invoice {
     margin: 40px auto;
     text-align: left;
-    width: 80%;
+    width: 100%;
 }
 .invoice td {
     padding: 5px 0;
