--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -1,10 +1,10 @@
 
-html {
+/* html {
     color: #333;
     font-size: 62.5%;
     font-family: "Open Sans", sans-serif; 
     background-color: #020914; 
-}
+} */
   
 .main{
     width: 90%;
