--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'EB Garamond', serif;
+}
+
+
 .App {
   text-align: center;
 }
@@ -21,7 +30,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
