--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -1,15 +1,9 @@
 
-html {
-    color: #333;
-    font-size: 62.5%;
-    font-family: "Open Sans", sans-serif; 
-    background-color: #020914; 
-}
   
 .main{
     width: 90%;
     height: 850px;
-    margin: 50px auto;
+    margin:  auto;
     display: flex;
     justify-content: space-around;
   
