--- a/src/assets/appstyle/product.module.css
+++ b/src/assets/appstyle/product.module.css
@@ -69,7 +69,6 @@
 
 .main-menu .list .classify{
     width: 95%;
-    height: 500px;
     background-color: #999999;
     display: flex;
     flex-direction: column;
@@ -81,7 +80,9 @@
     flex-direction: row;
     margin-bottom: 15px;
 }
-
+.classify .detail-item li{
+    list-style-type: none;
+}
 
 .classify .detail-item .title{
     width: 300px;
@@ -94,9 +95,9 @@
     text-align: center;
     line-height: 50px;
     border: 1px solid black;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 30px;
+    padding-left: 5px;
+    padding-right: 5px;
+    margin-right: 15px;
 }
 
 
@@ -187,7 +188,6 @@
     margin-left: 90px;
     font-weight: bold;
 }
-
 
 
 .main-menu .more{
