--- a/src/assets/appstyle/productdetail.module.css
+++ b/src/assets/appstyle/productdetail.module.css
@@ -165,7 +165,7 @@
     border-bottom: 1px solid #6c757d;
     
 }
-.desc-detail .row > th,td{
+.desc-detail .row > th td{
     padding-top: 10px;
     padding-bottom: 10px;
 
