--- a/src/assets/appstyle/cart.module.css
+++ b/src/assets/appstyle/cart.module.css
@@ -24,7 +24,7 @@
 .items .row{
     padding-bottom: 15px;
     border-bottom: 1px solid white;
-    
+    color: rgba(255, 255, 255, 0.842);
 }
 .items .row td {
     max-width: 200px;
@@ -43,6 +43,7 @@
 .total{
     width: 400px ;
     margin-left: 30px;
+    color: white;
     
 }
 .total .coupon{
@@ -76,7 +77,6 @@
     height: 35px;
     font-weight: 800;
     font-size: 20px;
-
 }
 
 .coupon .coupon-container .btn-discount{
@@ -138,7 +138,8 @@
 
     height: 50px;
     border-radius: 10px;
-    background-color:#44d62c;
+    /* background-color:#44d62c; */
+    background-color: yellow;
     font-size: 25px;
     font-weight: 25px;
     margin: 10px 20px;
