--- a/src/assets/appstyle/footer.module.css
+++ b/src/assets/appstyle/footer.module.css
@@ -1,15 +1,29 @@
 
 footer{
     width: 100%;
-    height: 350px;
-    background-color: black
+    height: 500px;
+    background-color: black;
+    display: flex;
+    flex-direction: column;
 }
 
 
 .footer__top{
     width: 100%;
-    height: 180px;
+    height: 330px;
     border-bottom:1px solid #333;
+}
+
+.footer__top .div-img{
+    width: 130px;
+    height: 40%;
+    margin-top: 20px;
+    margin-left: 30px;
+}
+
+.div-img .logo{
+    width: 100%;
+    height: 100%;
 }
 
 .footer__bottom{
