--- a/src/assets/appstyle/header.module.css
+++ b/src/assets/appstyle/header.module.css
@@ -9,12 +9,17 @@ header{
     z-index: 1;
 }
 
+.div-img{
+    width: 6%;
+    height: 100%;
+}
 
 .logo{
-    width: 9%;
+    width: 100%;
     height: 100%;
     margin-left: 100px;
 }
+
 
 .nav{
     margin-left: 270px;
