--- a/src/assets/appstyle/product.module.css
+++ b/src/assets/appstyle/product.module.css
@@ -78,23 +78,41 @@
 .classify .detail-item {
     display: flex;
     flex-direction: row;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
-.classify .detail-item li{
-    list-style-type: none;
-}
+
 
 .classify .detail-item .title{
     width: 300px;
-    line-height: 50px;
     margin-left: 20px;
     font-size: 1.5rem;
+    height: auto;
 }
+.classify .detail-item .list-atribute{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 10px;
+}
+
+.classify .detail-item .list-atribute span{
+    background-color: hsla(0, 3%, 94%, 0.644);
+}
+
+.classify .detail-item .list-atribute span:focus{
+    /* background-color: yellow; */
+    opacity: 1.5;
+}
+[aria-checked="true"]::before {
+    color: rgb(219, 60, 11);
+}
+
 
 .classify .detail-item .name-classify{
     text-align: center;
-    line-height: 50px;
     border: 1px solid black;
+    border-radius: 8px;
     padding-left: 5px;
     padding-right: 5px;
     margin-right: 15px;
@@ -120,8 +138,8 @@
 }
 
 .list-product .product{
-    width: 30%;
-    height: 550px;
+    width: 29%;
+    height: 600px;
     
 }
 
@@ -137,7 +155,8 @@
 }
 
 .list-product .product .product-container .product-image{
-    padding-left: 25px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .product-container .btn-compare {
@@ -159,13 +178,13 @@
 
 .list-product .product .infor-product{
     width: 100%;
-    height: 200px;
+    height: 250px;
     background-color: black;
     color: #fff;
 }
 
 .infor-product .name-product{
-    font-size: 1.2rem;
+    font-size: 1rem;
     padding: 20px 30px 0 30px;
 }
 
@@ -182,12 +201,40 @@
     width: 180px;
     height: 40px;
     border-radius: 30px;
-    background-color: #44d62c;
+    background-color: yellow;
     color: #000;
     margin-top: 20px;
     margin-left: 90px;
     font-weight: bold;
 }
+
+.list .padination{
+    position: relative;
+}
+.list .padination a{
+    color: black;
+    padding: 10px 18px;
+    text-decoration: none;
+}
+.list .pagination a:hover:not(.active) {
+    background-color: #031F3B;
+    color: white;
+}
+
+
+/* a:nth-child(5) {
+    background-color: green;
+    color: white;
+}
+
+a:nth-child(1) {
+    font-weight: bold;
+}
+  
+a:nth-child(7) {
+    font-weight: bold;
+} */
+
 
 
 .main-menu .more{
