--- a/src/assets/appstyle/productdetail.module.css
+++ b/src/assets/appstyle/productdetail.module.css
@@ -24,16 +24,21 @@
 
 .space {
     background-color: black;
-    width: 10%;
+    width: 25%;
 }
 
 .show-image{
-    width: 60%;
+    width: 100%;
     display: block;
+}
+.show-image .product-image{
+    display: flex;
+    justify-content: center;
 }
 .show-image .product-image img{
     display: block;
     width: 100%;
+    height: 100%;
 }
 
 
@@ -45,14 +50,6 @@
     top: 15rem;
     list-style: none;
 }
-.products-image{
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 40px;
-}
-
 
 
 .products-image .img-container{
@@ -76,12 +73,10 @@
 
 .info-product{
     background-color: black;
-    width: 30%;
-    padding-top: 100px;   
+    width: 50%;
     padding-left: 70px; 
 }
 .info-product .product-name{
-    /* color: #44d62c; */
     color: white;
     font-weight: 400;
     line-height: 1.5em;
