--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
-
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'EB Garamond', serif;
+  font-family: 'Ubuntu', serif;
+  border: 0;
+}
+a{
+  text-decoration: none;
 }
 
 
@@ -23,7 +26,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: rgb(248, 248, 252);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
