--- a/src/assets/appstyle/cart.module.css
+++ b/src/assets/appstyle/cart.module.css
@@ -1,49 +1,74 @@
 
 .cart-content{
-    width: 80%;
     padding-top: 100px;
-
-    margin-left: 10%;
-    margin-right: 10%;
+    background-color:rgb(248, 248, 252);
 }
-.container-cart{
-    margin-top: 50px;
+.div-link{
     display: flex;
     flex-direction: row;
-    margin-bottom: 30px;
+    width: 8%;
+    margin-left: 50px;
 }
-
+.container-cart{
+    display: flex;
+    flex-direction: row;
+    margin: 20px 13% 30px 13%;
+}
 
 .items{
-    width: 65%;
-
+    width: 70%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 15px;
 }
 .items table{
-    border-collapse:collapse
+    width: 100%;
+    border-collapse:collapse;
+    
 }
 .items .row{
+    padding-top: 30px;
     padding-bottom: 15px;
-    border-bottom: 1px solid white;
-    color: rgba(255, 255, 255, 0.842);
+    border-bottom: 1px solid wheat;
+    color: black;
 }
-.items .row td {
-    max-width: 200px;
+.items .row > th{
     font-size: 20px;
+    padding-bottom: 15px;
+    padding-top: 25px;
 }
-.items .row th{
-    font-size: 25px;
-    padding-bottom: 5px;
+
+.row td > a > img {
+    width: 100%;
+    height: 100%;
+    margin-left: 20px;
 }
-.items .row td,th{
+
+.row td,th{
     max-width: 200px;
     padding-right: 60px;
 }
 
+.quantity{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+
+}
+
+.quantity .btn {
+   display: flex;
+   justify-content: center;
+}
+
+.quantity span{
+    font-size: 20px;
+}
 
 .total{
     width: 400px ;
     margin-left: 30px;
-    color: white;
+    color: black;
     
 }
 .total .coupon{
@@ -51,13 +76,10 @@
     font-weight: bold;
     margin-top: 30px;
     margin-bottom: 20px;
-
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
 }
-
-.total .coupon{
-    background-color: #222;
-}
-
 
 .total .coupon p{
     padding: 15px 0 10px 120px;
@@ -88,51 +110,29 @@
 }
 
 .total .sum{
-    background-color: #222;
+    display: flex;
+    flex-direction: column;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255);
 }
 
 .total .sum p{
     font-size: 25px;
     font-weight: bold;
     padding: 10px 0 10px 100px;
-
+    margin-bottom: 30px;
 }
 
 .total .sum .sum-container{
     margin-bottom: 10px;
 }
 
-
 .total .sum span{
     font-size: 20px;
     padding-left: 10px;
     margin-bottom: 30px;
 }
-
-.quantity{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-
-
-}
-
-
-.quantity .btn {
-   display: flex;
-   justify-content: center;
-}
-
-
-.quantity span{
-    font-size: 20px;
-}
-
-.total .sum{
-    display: flex;
-    flex-direction: column;
-}
-
 
 .total .sum .checkout{
 
