--- a/src/assets/appstyle/login.module.css
+++ b/src/assets/appstyle/login.module.css
@@ -1,21 +1,20 @@
 
-
-html {
-  background-color: #333;
-} 
   
 .main {
-  width: 90%;
+  width: 100%;
   height: 850px;
   display: flex;
   justify-content:space-between;
   padding-top: 100px;
-  margin: auto;
+  padding-bottom: 40px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: whitesmoke;
+  
 
 }
 
 .left{
-  background-color: #020914;
   width: 60%;
   height: 100%;
 }
@@ -25,21 +24,24 @@ html {
 }
 
 .right{
-  background-color: #050214;
+  background-color: white;
   width: 40%;
   height: 100%;
 }
+
 .form {
   font-size: 20px;
-  padding: 32px 24px;
-  border-radius: 2px;
+  padding: 30px 20px;
   margin: 0 24px;
-  align-self: center;
-
+  display: flex;
+  flex-direction: column;
 }
 .desc{
-  color: #D1D1D4;
-  font-size: 2rem;
+  color:black;
+}
+.desc p{
+  font-size: 26px;
+  font-weight: 700;
 }
   
 .form-group {
