--- a/src/assets/appstyle/main.module.css
+++ b/src/assets/appstyle/main.module.css
@@ -1,7 +1,7 @@
 
 .container{
     width: 100%;
-    background-color: #333;
+    background-color: rgb(248, 248, 252);
     padding-top: 100px;
     
 }
@@ -20,7 +20,7 @@
 
 .content{
     width: 100%;
-    background-color: #333;
+    background-color: rgb(248, 248, 252);
     margin-top: 50px;
 
 }
@@ -28,7 +28,7 @@
 .slowFade {
     display: flex;
     align-items: flex-start;
-    background: #fff;
+    /* background: #fff; */
     /* height: 100vh; */
     overflow: hidden;
     position: relative;
