--- a/src/assets/appstyle/product.module.css
+++ b/src/assets/appstyle/product.module.css
@@ -1,22 +1,24 @@
-
-
 #content{
     width: 100%;
-    padding-top: 100px;
-    background-color: #333;
+    padding-top: 80px;
+    background-color: rgb(248, 248, 252);
+    color: #000;
 }
+
 
 .clearfix{
     width: 100%;
-    height: 70px;
+    height: 40px;
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
 }
 
-.clearfix p{
-    color: white;
-    font-size: 2rem;
-    margin-left: 30px;
+.div-link{
+    display: flex;
+    flex-direction: row;
+    width: 13%;
+    margin-left: 50px;
 }
 
 .main-menu {
@@ -28,11 +30,14 @@
 .catalog{
     width: 15%;
     height: 540px;
-    background-color: #2D2D2D;
+    background-color: white;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-
+    border-radius: 10px;
+    border: 1px solid whitesmoke;
+    margin-left: 2px;
+    
 }
 
 .catalog .item{
@@ -41,7 +46,7 @@
     align-items: center;
     font-size: 1.5rem;
     text-decoration: none;
-    color: #fff;
+    color: black;
 }
 
 .catalog .item .container-item{
@@ -61,18 +66,22 @@
     color: white;
 }
 
-
 .main-menu .list{
-    width:  70%;    
-    margin-left: 40px;
+    width:  70%;   
+    margin-left: 40px; 
+
 }
 
 .main-menu .list .classify{
     width: 95%;
-    background-color: #999999;
+    background-color: white;
     display: flex;
     flex-direction: column;
     color: black;
+    padding-bottom: 20px;
+    border-radius: 15px;
+    border: 1px solid whitesmoke;
+
 }
 
 .classify .detail-item {
@@ -81,13 +90,13 @@
     margin-bottom: 10px;
 }
 
-
 .classify .detail-item .title{
     width: 300px;
     margin-left: 20px;
     font-size: 1.5rem;
     height: auto;
 }
+
 .classify .detail-item .list-atribute{
     width: 100%;
     display: flex;
@@ -96,26 +105,20 @@
     row-gap: 10px;
 }
 
-.classify .detail-item .list-atribute span{
-    background-color: hsla(0, 3%, 94%, 0.644);
-}
-
-.classify .detail-item .list-atribute span:focus{
-    /* background-color: yellow; */
-    opacity: 1.5;
-}
-[aria-checked="true"]::before {
-    color: rgb(219, 60, 11);
-}
-
 
 .classify .detail-item .name-classify{
     text-align: center;
-    border: 1px solid black;
+    border: 1px solid #999999;
     border-radius: 8px;
     padding-left: 5px;
     padding-right: 5px;
     margin-right: 15px;
+    transition-duration: 0.4s;
+    background-color: rgb(206, 215, 223);
+    cursor: pointer;
+}
+.classify .detail-item .name-classify:hover{
+    background-color: rgba(134, 7, 7, 0.411);
 }
 
 
@@ -123,45 +126,71 @@
     width: 95%;
     height: 80px;
     margin-top: 30px;
-    border: 1px solid black;
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
+.main-menu .list .sort p{
+    margin-left: 20px;
+    line-height: 40px;
+    font-weight: 600;
+
+}
+.main-menu .list .sort div{
+    margin-left: 25px;
+    height: 40px;
+    padding: 10px;
+    border: 1px solid #999999a8;
+    border-radius: 5px;
+    line-height: 20px;
+}
+
 
 
 .main-menu .list .list-product{
     width: 95%;
     display: flex;
     flex-wrap: wrap;
-    row-gap: 40px;
-    justify-content: space-between;
-    margin-top: 30px;
     margin-bottom: 30px;
+    justify-content: space-between;
 }
 
 .list-product .product{
-    width: 29%;
-    height: 600px;
+    width: 30%;  
+    border: 1px solid whitesmoke;
+    border-radius: 10px;
+    margin-top: 40px;
     
+}
+
+
+.list-product .product .product-container{
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border-radius: 10px;
 }
 
 .product-link-detail {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
-.list-product .product .product-container{
-    width: 100%;
-    height: 350px;
-    background-color: #242323;
-}
 
 .list-product .product .product-container .product-image{
-    max-width: 100%;
-    max-height: 100%;
+    border-radius: 10px;
+    width: 12vw;
+    height: 12vw;
 }
 
 .product-container .btn-compare {
     height: 50px;    
-    color: #fff;
+    color: rgb(12, 2, 2);
     font-size: 1.5rem;
     display: flex;
     align-items: center;
@@ -172,40 +201,56 @@
     height: 1.5rem;
     margin-left: 40px;
     margin-right: 15px;
-    border:1px solid white; 
+    border:1px solid #999999; 
 }
 
 
 .list-product .product .infor-product{
     width: 100%;
-    height: 250px;
-    background-color: black;
-    color: #fff;
+    background-color: white;
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+}
+
+.infor-product .caption {
+    padding: 20px;
+
 }
 
 .infor-product .name-product{
-    font-size: 1rem;
-    padding: 20px 30px 0 30px;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+    font-size: 20px;
+    font-weight: 600;
 }
 
 
 .infor-product .price-product{
-    font-size: 1.5rem;
+    font-size: 2rem;
     text-align: center;
-    margin-top: 30px;
-    
+    margin-top: 15px;   
+    color: red;
 }
 
 
 .infor-product .btn-addProduct{
+    display: flex;
+    justify-content: center;
+    color: #000;
+    font-weight: bold;
+    margin-top: 15px;
+    margin-bottom: 20px;
+}
+.infor-product .btn-addProduct button{
     width: 180px;
     height: 40px;
-    border-radius: 30px;
     background-color: yellow;
-    color: #000;
-    margin-top: 20px;
-    margin-left: 90px;
-    font-weight: bold;
+    border-radius: 30px;
 }
 
 .list .padination{
