--- a/src/assets/appstyle/productdetail.module.css
+++ b/src/assets/appstyle/productdetail.module.css
@@ -1,59 +1,66 @@
 
 #content-detail{
     width: 100%;
-    padding-top: 100px;
-    background-color: #333;
+    padding-top: 70px;
+    background-color: rgb(248, 248, 252);
+    margin-bottom: 30px;
 }
 
 .clearfix{
     width: 100%;
-    height: 70px;
+    height: 50px;
     display: flex;
     align-items: center;
-    font-size: 1.5rem;
-    color: white;
     padding-left: 30px;
+    margin-bottom: 10px;
+    margin-top: 20px;
 }
-
-
-.main-detail {
-    width: 100%;
+.div-link{
     display: flex;
     flex-direction: row;
+    margin-left: 50px;
 }
 
-.space {
-    background-color: black;
-    width: 25%;
+.main-detail {
+    width: 60%;
+    margin: 0 20%;
+    display: flex;
+    flex-direction: row;
+    border: 1px whitesmoke solid;
+    border-radius: 10px;
+    background-color: white;
+    margin-bottom: 30px;
 }
+
 
 .show-image{
-    width: 100%;
+    width: 50%;
     display: block;
+    
+    margin: 10px;
+    
+    
 }
 .show-image .product-image{
     display: flex;
     justify-content: center;
+    
 }
 .show-image .product-image img{
     display: block;
-    width: 100%;
-    height: 100%;
+    width: 90%;
+    height: 90%;
+    
 }
-
-
-
 .products-image{
     display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 15rem;
+    flex-direction: row;
     list-style: none;
+    display: flex;
+    justify-content: center;
 }
-
-
 .products-image .img-container{
-    border: 1px solid #999;
+    border: 1px solid whitesmoke;
     height: 5rem;
     width: 5rem;
 }
@@ -69,26 +76,25 @@
     max-height: 100%;
 }
 
-
-
 .info-product{
-    background-color: black;
     width: 50%;
-    padding-left: 70px; 
+    background-color: white;
+    margin: 10px;
 }
+
 .info-product .product-name{
-    color: white;
-    font-weight: 400;
+    color: black;
+    font-weight: 900;
     line-height: 1.5em;
-    margin-top: 50px;
-    width: 400px;
-    font-size: 1.3rem;
+    margin-top: 40px;
+    font-size: 1.4rem;
     
 }
 
 .info-product .desc{
-    margin-top: 40px;
-    color: #999;
+    margin-top: 20px;
+    color:black;
+    margin-left: 30px;
 }
 
 .desc ul{
@@ -107,20 +113,20 @@
 }
 
 .info-product .price{
-    color: #fff;
+    color: red;
     font-size: 3rem;
     font-weight: 400;
     line-height: 3rem;
-    margin-top: 50px;
-    width: 300px;
+    margin-top: 30px;
+
 }
 
 .add-to-cart{
-    margin-top: 80px;
-    width: 270px;
+    width: 300px;
     background-color: yellow;
     height: 50px;
     border-radius: 30px;
+    margin: 20px 100px;
 
 }
 .add-to-cart p{
@@ -130,8 +136,12 @@
 }
 
 .container-detail{
-    background-color: #252525;
-    color: #fff;
+    background-color: white;
+    color: black;
+    width: 60%;
+    margin:  0 20%;
+    border-radius: 10px;
+    border: 1px solid whitesmoke;
 }
 
 .container-detail{
@@ -153,7 +163,6 @@
     margin-bottom: 20px;
 }
 
-
 .desc-detail table{
     width: 100%;
     border-collapse: collapse;
@@ -165,7 +174,7 @@
     vertical-align: middle;
 }
 .desc-detail .row{
-    border-bottom: 1px solid #6c757d;
+    border-bottom: 1px solid#6c757d;
     margin-bottom: 30px;
     
 }
@@ -177,7 +186,7 @@
 .desc-detail .row th{
     text-transform: uppercase;
     text-align: start;
-    padding-left: 7px;
+    padding-left: 17px;
     padding-top: 7px;
     padding-bottom: 20px;
     margin-bottom: 10px;
