--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -1,98 +1,162 @@
 
-  
-.main{
-    width: 90%;
-    height: 850px;
-    margin:  auto;
-    display: flex;
-    justify-content: space-around;
-
-  
+.main {
+  width: 100%;
+  height: 850px;
+  display: flex;
+  justify-content:space-between;
+  padding-top: 100px;
+  padding-bottom: 40px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: whitesmoke;
 }
 
 .left{
-    background-color: #020914;
-    width: 60%;
-    height: 100%;
+  width: 60%;
+  height: 100%;
 }
 
 .img-left{
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .right{
-    background-color: #050214;
-    width: 40%;
-    height: 100%;
+  background-color: white;
+  width: 40%;
+  height: 100%;
 }
 
 .form {
-    font-size: 20px;
-    padding: 32px 24px;
-    border-radius: 2px;
-    margin: 24px;
-    align-self: center;
-  
-}
+  font-size: 20px;
+  padding: 0 20px;
+  margin: 0 50px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 60px;
 
+}
 .desc{
-    color: #D1D1D4;
-    font-size: 2rem;
-    line-height: 0.5;
+  color:black;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  text-align: center;
 }
-  
-.form-group {
-    margin-top: 40px;
-    display: flex;
-    margin-bottom: 16px;
-    flex-direction: column;
+.desc p{
+  font-size: 26px;
+  font-weight: 700;
 }
 
-.input{
-    border-bottom: 2px solid #D1D1D4;
-}
-
-.fa{
-    color: aliceblue;
-}
-  
-.form-control {
-    border: none;
-    background: none;
-    color: #D1D1D4;
-    width: 90%;
-    
-}
-
-.form-control:active,
-.form-control:focus,
-.form-control:hover {
-      outline: none;
-      border-bottom-color: #6A679E;
-}
-
-.form-label{
-    color: #D1D1D4;
-    font-size: 1.5rem;
-    margin-bottom: 13px ;
-}
   
 
+
+.form .input{
+  margin-bottom: 15px;
+}
+
+
+.form .input input{
+  height: 40px;
+  width: 100%;
+  font-size: 20px;
+  color: black;
+  border: 2px solid #ccd0d5;
+  border-radius: 5px;
+  padding-left: 15px;
   
-.buttons-login{
-    margin-top: 100px;
-    display: flex;
-    flex-direction: column;
-    
 }
-.btn-submit{
-    width: 380px;
-    height: 50px;
-    margin-top: 80px;
-    margin-left: 50px;
-    margin-right: 50px;
-    border-radius: 15px;
-    background-color: purple; 
+
+.form .input .is-invaid{
+  border: 1px solid red;
+  border-radius: 5px;
 }
+
+.form .input p{
+  font-size:15px ;
+  color: red;
+  margin-top: 5px;
+  margin-left: 5px;
+  
+}
+
+.form .birthday{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  margin-bottom: 15px;
+}
+.birthday > label{
+  line-height: 40px;
+}
+
+.birthday .date{
+  display: flex;
+  width: 60%;
+  justify-content: space-around;
+  
+
+}
+
+.birthday .date > select{
+  border: 2px solid #ccd0d5;
+  border-radius: 5px;
+  padding: 0 20px;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 500;
+  
+}
+
+.form .gender{
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 15px;
+}
+
+.gender .sex{
+  width: 100px;
+  display: flex;
+  justify-content: space-between;
+  margin-left: 40px;
+  padding: 0 10px;
+  border: 2px solid #ccd0d5;
+  border-radius: 5px;
+  line-height: 40px;
+}
+.gender .sex label{
+  line-height: 38px;
+}
+
+
+input:active,
+input:focus,
+input:hover {
+  outline: none;
+  border-bottom-color: #6A679E;
+}
+
+.form .form-submit{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.form-submit .btn-login{
+  height: 60px;
+  padding: 10px 100px ;
+  margin-bottom: 20px;
+}
+.form-submit .btn-login button{
+  height: 100%;
+  width: 100%;
+  background-color: #6A679E;
+  border-radius: 10px;
+  
+}
+
+
+
 
