--- a/src/assets/appstyle/footer.module.css
+++ b/src/assets/appstyle/footer.module.css
@@ -2,34 +2,51 @@
 footer{
     width: 100%;
     height: 500px;
-    background-color: black;
+    background-color: whitesmoke;
     display: flex;
     flex-direction: column;
 }
 
 
-.footer__top{
+.footer_top{
     width: 100%;
     height: 330px;
     border-bottom:1px solid #333;
+    display: flex;
+    flex-direction: row;
 }
 
-.footer__top .div-img{
-    width: 130px;
+.footer_top .info-company{
+    width: 30%;
     height: 40%;
     margin-top: 20px;
     margin-left: 30px;
 }
 
-.div-img .logo{
-    width: 100%;
-    height: 100%;
+.info-company .logo{
+    width: 20%;
+    height: 50%;
 }
+.info-company >h2 {
+    margin: 30px 0;
+}
+
+
+.info-company .item-infor{
+    display: flex;
+    flex-direction: row;
+    margin-top: 10px;
+}
+.info-company .item-infor > p{
+    margin-left: 10px;
+}
+
+
 
 .footer__bottom{
     width: 100%;
     height: 170px;
-    color: #fff;
+    color:  black;
     display: flex;
     flex-direction: row;
 
@@ -45,27 +62,25 @@ footer{
     background-color: #fff;
 }
 
-
 .pay h4{
     margin-top: 20px;
     margin-left: 20px;
 }
+
 .pay .listMethodPay{
     width: 65%;
     display: flex;
     flex-direction: row;
     margin-top: 25px;
     text-align: center;
-    color: #fff;
+    color:black;
 }
-
 
 .pay .listMethodPay .item{
     width: 25%;
     margin: auto 0;
     
 }
-
 
 .footer__bottom .community{
     width: 60%;
