--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,17 @@ a{
   text-decoration: none;
 }
 
+li{
+  list-style-type: none;
+}
+
+
 
 .App {
   text-align: center;
+}
+.main{
+  background-color: rgb(248, 248, 252);
 }
 
 .App-logo {
