--- a/src/assets/appstyle/header.module.css
+++ b/src/assets/appstyle/header.module.css
@@ -1,14 +1,14 @@
 
 header{
     width: 100%;
-    height: 7vh;
+    height: 3.5vw;
     background-color: white;
-    /* background-color: rgba(255, 255, 0, 0.664); */
     position: fixed;
     display: flex;
     justify-content: space-between;
     z-index: 1;
     border: 1px solid whitesmoke;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
 .div-img{
@@ -27,17 +27,16 @@ header{
     height: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .nav > ul > li{
     display: inline-block;
-    line-height: 7vh;
     margin: 0 15px;
     
 }
 
 .nav > ul > li > a{
-    text-decoration: none;
     font-size: 1.5rem;
     display: inline-block;
     color: black;
@@ -53,87 +52,66 @@ header{
     height: 100%;
     display: flex;
     flex-direction: row;
+    gap: 1.2vw;
+    align-items: center;
 
 }
 
 .distribution{
     height: 60%;
-    border-left: 1px solid black;
-    margin-top: 12px;
-}
-.btn{
-    line-height: 9vh;
-    margin-left: 1.3vw;
+    border-left: 1.5px solid black;
 }
 
-.btn button{
-    background-color: white;
-    /* background-color: yellow; */
-    margin: 2.2vh auto;
+.btn{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    position: relative;
 }
 
 .btn:hover {
     color: slateblue;
 }
 
-.personal .btn-personal{
-    margin-left: 1.3vw;
-    /* background-color: yellow; */
-    background-color: white;
-    margin: 2.2vh 0 2.2vh 1.3vw;
-}
 
-.personal .detailPersonal{
-    display: none;
-    width: 250px;
-    height: 220px;
+
+.btn .detailPersonal{
     background-color: rgb(207, 207, 200);
     position: absolute;
-    list-style-type: none;
-
+    top: 3.5vw;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5vw;
+    white-space: nowrap;
 }
 
-.personal .detailPersonal li{
-    margin-left: 25px;
-    width: 100%;
-    height: 22%;
-    padding-top: 20px;
-}
 
-.personal .detailPersonal li a{ 
-    text-decoration: none;
+.detailPersonal li a{ 
     font-size: 1.1rem;
     font-weight: bold;
     color: black;
 }
+.detailPersonal a:hover{
+    color: #eb1313;
+}
 
-.personal:hover .detailPersonal{
-    display: block;
-}
-.btn-cart{
-    position: relative;
-    /* background-color: yellow; */
-    background-color: white;
-}
+
 .cart-item-qty{
-    position: absolute;
-    font-size: 15px;
-    top: 18px;
-    left: 20px;
-    color: #eee;
-    background-color: #eb1313;
     width: 15px;
     height: 15px;
+    position: absolute;
+    font-size: 15px;
+    color: #eee;
+    background-color: #eb1313;
     border-radius: 50%;
-    text-align: center;
     display: flex;
+    align-items: center;
     justify-content: center;
-    justify-items: center;
-    /* font-weight: 600; */
+    top: 0.5vw;
+    right: -0.5vw;
 }
-.cart-item-qty{
-    line-height: 15px;
-}
+
 
 
 
