--- a/src/assets/appstyle/product.module.css
+++ b/src/assets/appstyle/product.module.css
@@ -17,7 +17,7 @@
 .div-link{
     display: flex;
     flex-direction: row;
-    width: 13%;
+    gap: 20px;
     margin-left: 50px;
 }
 
@@ -37,6 +37,7 @@
     border-radius: 10px;
     border: 1px solid whitesmoke;
     margin-left: 2px;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     
 }
 
@@ -69,7 +70,6 @@
 .main-menu .list{
     width:  70%;   
     margin-left: 40px; 
-
 }
 
 .main-menu .list .classify{
@@ -81,6 +81,7 @@
     padding-bottom: 20px;
     border-radius: 15px;
     border: 1px solid whitesmoke;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 
 }
 
@@ -117,6 +118,8 @@
     background-color: rgb(206, 215, 223);
     cursor: pointer;
 }
+
+
 .classify .detail-item .name-classify:hover{
     background-color: rgba(134, 7, 7, 0.411);
 }
@@ -165,6 +168,7 @@
     border: 1px solid whitesmoke;
     border-radius: 10px;
     margin-top: 40px;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
     
 }
 
