--- a/src/assets/appstyle/productdetail.module.css
+++ b/src/assets/appstyle/productdetail.module.css
@@ -8,19 +8,19 @@
 
 .clearfix{
     width: 100%;
-    height: 50px;
+    height: 40px;
     display: flex;
     align-items: center;
-    padding-left: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     margin-top: 20px;
 }
+
 .div-link{
     display: flex;
     flex-direction: row;
+    gap: 10px;
     margin-left: 50px;
 }
-
 .main-detail {
     width: 60%;
     margin: 0 20%;
@@ -30,6 +30,7 @@
     border-radius: 10px;
     background-color: white;
     margin-bottom: 30px;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
 
@@ -154,6 +155,7 @@
     height: 100%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 
 }
 .desc-detail .title{
