--- a/src/assets/appstyle/cart.module.css
+++ b/src/assets/appstyle/cart.module.css
@@ -37,13 +37,13 @@
     padding-top: 25px;
 }
 
-.row td > a > img {
+.items .row td > a > img {
     width: 100%;
     height: 100%;
     margin-left: 20px;
 }
 
-.row td,th{
+.items .row > td,th{
     max-width: 200px;
     padding-right: 60px;
 }
@@ -59,6 +59,8 @@
 .quantity .btn {
    display: flex;
    justify-content: center;
+   align-items: center;
+   cursor: pointer;
 }
 
 .quantity span{
@@ -135,13 +137,12 @@
 }
 
 .total .sum .checkout{
-
     height: 50px;
     border-radius: 10px;
-    /* background-color:#44d62c; */
-    background-color: yellow;
+    background-color: #008ECC;
     font-size: 25px;
     font-weight: 25px;
     margin: 10px 20px;
+    cursor: pointer;
  
 }
