--- a/src/assets/appstyle/footer.module.css
+++ b/src/assets/appstyle/footer.module.css
@@ -1,10 +1,12 @@
 
 footer{
     width: 100%;
-    height: 500px;
-    background-color: whitesmoke;
+    height: 26vw;
+    /* background-color: whitesmoke; */
+    background-color: #008ECC;
     display: flex;
     flex-direction: column;
+    margin-top: 20px;
 }
 
 
