--- a/src/assets/appstyle/header.module.css
+++ b/src/assets/appstyle/header.module.css
@@ -3,11 +3,12 @@ header{
     width: 100%;
     height: 3.5vw;
     background-color: white;
+    /* background-color: #008ECC; */
+    border-bottom: 1px solid #008ECC;
     position: fixed;
     display: flex;
     justify-content: space-between;
     z-index: 1;
-    border: 1px solid whitesmoke;
     box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
 }
 
@@ -44,7 +45,7 @@ header{
 }
 
 .nav li:hover a{
-    color: blue;
+    color: #008ECC;
 }
 
 .iconBlock{
@@ -70,7 +71,7 @@ header{
 }
 
 .btn:hover {
-    color: slateblue;
+    color: #008ECC;
 }
 
 
@@ -110,6 +111,18 @@ header{
     justify-content: center;
     top: 0.5vw;
     right: -0.5vw;
+}
+
+.login{
+    font-size: 1.5rem;
+    display: flex;
+    align-items: center;
+
+    color: black;
+    font-weight: 900;
+}
+.login:hover{
+    color: #008ECC;
 }
 
 
