--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -76,48 +76,43 @@
   
 }
 
+.form .include {
+  display: flex;
+  margin-bottom: 15px;
+  justify-content: space-between;
+}
 
 .form .birthday{
-  height: 40px;
   display: flex;
   flex-direction: row;
   justify-items: center;
-  margin-bottom: 15px;
-}
-.birthday > label{
-  line-height: 40px;
 }
 
+
 .birthday .date{
-  width: 60%;
-  margin-left: 20px;
+  margin-left: 10px;
   border: 2px solid #ccd0d5;
   border-radius: 5px;
-  font-size: 25px;
-  padding: 0 20px;
+  padding: 0 10px;
 }
 
 
 .form .gender{
-  height: 40px;
   display: flex;
   flex-direction: row;
-  margin-bottom: 15px;
+  align-items: center;
 }
 
 .gender .sex{
   width: 100px;
   display: flex;
   justify-content: space-between;
-  margin-left: 40px;
-  padding: 0 10px;
-  border: 2px solid #ccd0d5;
+  margin-left: 10px;
+  padding: 2px 10px;
+  border: 1px solid #ccd0d5;
   border-radius: 5px;
-  line-height: 40px;
 }
-.gender .sex label{
-  line-height: 38px;
-}
+
 
 
 input:active,
