--- a/src/assets/appstyle/login.module.css
+++ b/src/assets/appstyle/login.module.css
@@ -74,15 +74,15 @@
 
 .form .form-submit{
   display: flex;
-  flex-direction: column;
-  text-align: center;
+  flex-direction: row;
   margin-top: 100px;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .form-submit .btn-login{
   height: 60px;
-  padding: 10px 100px ;
-  margin-bottom: 20px;
+  width: 250px;
 }
 
 .form-submit .btn-login button{
@@ -94,12 +94,8 @@
   
 }
 
-
-
 .form-submit .btn-social{
   display: flex;
-  justify-content: space-between;
-  padding: 30px 240px;
 
 }
 
@@ -112,6 +108,6 @@
 }
   
 .img-item{
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
 }
