--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -82,10 +82,11 @@
   justify-content: space-between;
 }
 
-.form .birthday{
+.include .birthday{
   display: flex;
   flex-direction: row;
   justify-items: center;
+  align-items: center;
 }
 
 
@@ -97,20 +98,36 @@
 }
 
 
-.form .gender{
+.include .gender{
   display: flex;
   flex-direction: row;
   align-items: center;
 }
+.include .birthday > label{
+  margin: 0;
+}
+
+.include .gender > label{
+  margin: 0;
+}
+label {
+  margin: 0;
+}
+
 
 .gender .sex{
   width: 100px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   margin-left: 10px;
   padding: 2px 10px;
   border: 1px solid #ccd0d5;
   border-radius: 5px;
+}
+
+.gender .sex > input{
+  cursor: pointer;
 }
 
 
