--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -150,12 +150,14 @@ input:hover {
   height: 60px;
   padding: 10px 100px ;
   margin-bottom: 20px;
+  
 }
 .form-submit .btn-login button{
   height: 100%;
   width: 100%;
   background-color: #6A679E;
   border-radius: 10px;
+  cursor: pointer;
   
 }
 
