--- a/src/assets/appstyle/register.module.css
+++ b/src/assets/appstyle/register.module.css
@@ -34,7 +34,6 @@
   display: flex;
   flex-direction: column;
   margin-top: 60px;
-
 }
 .desc{
   color:black;
@@ -49,16 +48,20 @@
 
 .form .input{
   margin-bottom: 15px;
+  display: flex;
+  align-items: center;
 }
 
+.form .input > label{
+  border: 1px solid #ced4da;
+  background-color: #e9ecef;
+  padding-left: 5px ;
+}
 
 .form .input input{
-  height: 40px;
-  width: 100%;
-  font-size: 20px;
+  width: 70%;
   color: black;
-  border: 2px solid #ccd0d5;
-  border-radius: 5px;
+  border: 1px solid #ced4da;
   padding-left: 15px;
   
 }
